2009-09-04  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: on source change, don't only Abort() the
	dlders, but also reset the internal state of the dlders to Free

	r: alan

2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: reset the Viewport to its default values
	on source change. Eventually fixes drt#511.

	r:lewing

2009-09-03  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.h: Nuke the CallInitialize metadata from TextBox.

2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>

	* deepzoomimagetilesource.h: add Generate* attributes

2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.h: drop the GenrateJSBinding attributes

2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>

	* xaml.cpp:
	* deepzoomimagetilesource.h|cpp: remove a hack in the parser, and
	move it to the DZITS ctor. DRTs (509 and 511) and some sites shows
	that we have to strip an eventual leading / on ctor but not on
	SetUriSource.

2009-09-02  Andreia Gaita  <avidigal@novell.com>

	* dependencyobject.cpp: move the storage cleanup to Dispose, they
	will need to invoke handlers and other things that require the
	object to still be alive. fixes crash on drt 109

	r: lewing

2009-09-02  Jackson Harper  <jackson@ximian.com>

	* dependencyproperty.cpp: If the explicitly mentioned type does
	not contain the property, try looking for the property on the
	current lookup obejct.  Allows things like (UIElement.Height) on a
	Grid object.

	r: shana

2009-09-02  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (TextBlock::OnCollectionChanged): Explicitly call
	UpdateLayoutAttributes(). We can't rely on it being called as a
	result of setting the Text property since the overall Text
	property value might not have changed.
	(TextBlock::OnCollectionItemChanged): Same here.
	(TextBlock::OnPropertyChanged): Same for when the Inlines property
	changes. In the FontSource case, don't set invalidate to
	false. Also set dirty to true.